# backend/internal/user/model.go
@@ -10,6 +10,8 @@ type User struct {
 	CreatedAt      time.Time   `db:"created_at" json:"created_at" csv:"-"`
 	UpdatedAt      null.Time   `db:"updated_at" json:"updated_at" csv:"-"`
 	Name           string      `db:"name" json:"name"  csv:"name"`
+	Group          null.String `db:"group_name" json:"group"  csv:"group"`
+	Role           string      `db:"role" json:"role"  csv:"role"`
 	PasswordDigest null.String `db:"password_digest" json:"-"  csv:"-"`
 	MemberID       null.String `db:"member_id" json:"member_id"  csv:"member_id"`
 	RFIDuid        null.String `db:"rfid_uid" json:"rfid_uid" csv:"rfid_uid"`
